lldap ingress route fix

--- a/kubernetes/apps/networking/lldap/app/ingress-route.yaml
+++ b/kubernetes/apps/networking/lldap/app/ingress-route.yaml
@@ -11,8 +11,7 @@ spec:
     - kind: Rule
       match: Host(`ldap.${SECRET_DOMAIN}`)
       services:
-        - name: ldap
+        - name: lldap
           port: 17170
-
   tls:
     secretName: "ldap-${SECRET_DOMAIN/./-}-tls"
