--- a/kubernetes/apps/networking/authelia/app/helm-release.yaml
+++ b/kubernetes/apps/networking/authelia/app/helm-release.yaml
@@ -37,6 +37,9 @@ spec:
       - sh
       - -c
       - authelia --config /data/authelia/config/configuration.yaml
+    volumeMounts:
+      - mountPath: "/config"
+        name: data
     configMap:
       # Enable the configMap source for the Authelia config.
       # If this is false you need to provide a volumeMount via PV/PVC or other means that mounts to /config.
