--- a/kubernetes/apps/networking/authelia_newbak/app/ingress-route.yaml
+++ b/kubernetes/apps/networking/authelia_newbak/app/ingress-route.yaml
@@ -14,4 +14,4 @@ spec:
         - name: authelia
           port: 80
   tls:
-    secretName: "ldap-${SECRET_DOMAIN/./-}-tls"
+    secretName: "auth-${SECRET_DOMAIN/./-}-tls"
