--- a/kubernetes/apps/networking/authelia/app/helm-release.yaml
+++ b/kubernetes/apps/networking/authelia/app/helm-release.yaml
@@ -36,7 +36,7 @@ spec:
     command:
       - sh
       - -c
-      - authelia --config /config/configuration.yaml
+      - authelia --config /data/authelia/config/configuration.yaml
     volumeMounts:
       - mountPath: "/config"
         name: data
