--- a/kubernetes/apps/networking/authelia/app/helm-release.yaml
+++ b/kubernetes/apps/networking/authelia/app/helm-release.yaml
@@ -22,8 +22,8 @@ spec:
     remediation:
       retries: 5
   values:
-    global:
-      nameOverride: authelia
+    # global:
+    #   nameOverride: authelia
     controller:
       replicas: 1
       strategy: RollingUpdate
