--- a/kubernetes/apps/networking/authelia/app/helm-release.yaml
+++ b/kubernetes/apps/networking/authelia/app/helm-release.yaml
@@ -66,7 +66,7 @@ spec:
       enabled: true
       accessMode: ReadWriteMany
       path: /data
-      #subPath: /data/authelia/config
+      subPath: /data/authelia/config
       existingClaim: pvc-networking
     resources:
       requests:
