--- a/kubernetes/apps/networking/authelia/app/kustomization.yaml
+++ b/kubernetes/apps/networking/authelia/app/kustomization.yaml
@@ -5,3 +5,7 @@ namespace: networking
 resources:
   - ingress-route.yaml
   - helm-release.yaml
+configMapGenerator:
+  - name: authelia-config
+    files:
+      - ./config/config2.yaml
