--- a/kubernetes/apps/networking/authelia/app/kustomization.yaml
+++ b/kubernetes/apps/networking/authelia/app/kustomization.yaml
@@ -8,4 +8,4 @@ resources:
 configMapGenerator:
   - name: authelia-config
     files:
-      - ./config/config2.yaml
+      - ./config/configuration.yaml
