--- a/kubernetes/apps/networking/authelia/app/kustomization.yaml
+++ b/kubernetes/apps/networking/authelia/app/kustomization.yaml
@@ -5,7 +5,7 @@ namespace: networking
 resources:
   - ingress-route.yaml
   - helm-release.yaml
-configMapGenerator:
-  - name: authelia-config
-    files:
-      - ./config/configuration.yaml
+# configMapGenerator:
+#   - name: authelia-config
+#     files:
+#       - ./config/configuration.yaml
