--- a/kubernetes/apps/networking/authelia/app/kustomization.yaml
+++ b/kubernetes/apps/networking/authelia/app/kustomization.yaml
@@ -5,6 +5,17 @@ namespace: networking
 resources:
   - ingress-route.yaml
   - helm-release.yaml
+commonLabels:
+  app.kubernetes.io/name: authelia
+  app.kubernetes.io/instance: authelia
+patchesStrategicMerge:
+  - patches/env.yaml
+configMapGenerator:
+  - name: authelia
+    files:
+      - config/configuration.yml
+generatorOptions:
+  disableNameSuffixHash: true
 # configMapGenerator:
 #   - name: authelia-config
 #     files:
