--- a/kubernetes/apps/networking/authelia/app/patches/env.yaml
+++ b/kubernetes/apps/networking/authelia/app/patches/env.yaml
@@ -4,7 +4,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: authelia
-  namespace: default
+  namespace: networking
 spec:
   values:
     env:
@@ -24,5 +24,5 @@ spec:
       AUTHELIA_AUTHENTICATION_BACKEND_FILE_PASSWORD_ARGON2_SALT_LENGTH: 16
       AUTHELIA_AUTHENTICATION_BACKEND_FILE_PASSWORD_ARGON2_MEMORY: 1024
       AUTHELIA_AUTHENTICATION_BACKEND_FILE_PASSWORD_ARGON2_PARALLELISM: 8
-      AUTHELIA_ACCESS_CONTROL_DEFAULT_POLICY: deny
-      #AUTHELIA_ACCESS_CONTROL_RULES_DOMAIN:
+      #AUTHELIA_ACCESS_CONTROL_DEFAULT_POLICY: deny
+      #AUTHELIA_ACCESS_CONTROL_RULES_DOMAIN
