--- a/kubernetes/apps/networking/authelia/app/kustomization.yaml
+++ b/kubernetes/apps/networking/authelia/app/kustomization.yaml
@@ -13,7 +13,7 @@ patchesStrategicMerge:
 configMapGenerator:
   - name: authelia
     files:
-      - config/configuration.yml
+      - ./config/configuration.yml
 generatorOptions:
   disableNameSuffixHash: true
 # configMapGenerator:
