--- a/kubernetes/apps/networking/authelia/app/kustomization.yaml
+++ b/kubernetes/apps/networking/authelia/app/kustomization.yaml
@@ -9,7 +9,7 @@ commonLabels:
   app.kubernetes.io/name: authelia
   app.kubernetes.io/instance: authelia
 patchesStrategicMerge:
-  - patches/env.yaml
+  - ./patches/env.yaml
 configMapGenerator:
   - name: authelia
     files:
