--- a/kubernetes/apps/networking/authelia/app/patches/env.yaml
+++ b/kubernetes/apps/networking/authelia/app/patches/env.yaml
@@ -4,7 +4,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: authelia
-  #namespace: networking
+  namespace: networking
 spec:
   values:
     env:
