--- a/kubernetes/apps/networking/authelia/app/kustomization.yaml
+++ b/kubernetes/apps/networking/authelia/app/kustomization.yaml
@@ -10,12 +10,12 @@ commonLabels:
   app.kubernetes.io/instance: authelia
 patchesStrategicMerge:
   - ./patches/env.yaml
-configMapGenerator:
-  - name: authelia-config
-    files:
-      - ./config/configuration.yaml
-generatorOptions:
-  disableNameSuffixHash: true
+# configMapGenerator:
+#   - name: authelia-config
+#     files:
+#       - ./config/configuration.yaml
+# generatorOptions:
+#   disableNameSuffixHash: true
 # configMapGenerator:
 #   - name: authelia-config
 #     files:
