--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./authelia.yaml
+  - ./authentik.yaml
   - ./bitnami.yaml
   - ./bjw-s.yaml
   - ./external-dns.yaml
